@@ -25,7 +25,7 @@
             "description": "The function involved in the stack frame",
             "type": ["string", "null"]
         },
-        "in_app": {
+        "library_frame": {
             "type": ["boolean", "null"]
         },
         "lineno": {
