@@ -331,7 +331,7 @@ var errorSchema = `{
             "description": "The function involved in the stack frame",
             "type": ["string", "null"]
         },
-        "in_app": {
+        "library_frame": {
             "type": ["boolean", "null"]
         },
         "lineno": {
@@ -432,7 +432,7 @@ var errorSchema = `{
             "description": "The function involved in the stack frame",
             "type": ["string", "null"]
         },
-        "in_app": {
+        "library_frame": {
             "type": ["boolean", "null"]
         },
         "lineno": {
